# synthia

./: Cargo.toml  Makefile  README-zh.md  README.md  test_agent.py  test_agent.sh  test_simple_agent.py
.trae/documents/: plan_20251226_060855.md
synthia-agent/: Cargo.toml
synthia-agent/src/: lib.rs  main.rs
synthia-agent/src/clients/: mod.rs
synthia-agent/src/core/: mod.rs
synthia-agent/src/mcp/: mod.rs
synthia-agent/src/memory/: mod.rs
synthia-agent/src/prompts/: mod.rs
synthia-agent/src/tools/: mod.rs
